# heinrich

./: .gitignore  .mcp.json  .osiris  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.playwright-mcp/: page-2026-04-12T05-46-30-959Z.yml  page-2026-04-12T05-50-04-651Z.yml  page-2026-04-12T05-53-03-111Z.yml  page-2026-04-12T06-09-16-485Z.yml  page-2026-04-12T06-12-10-378Z.yml  page-2026-04-12T06-13-08-181Z.yml  page-2026-04-12T06-21-58-004Z.yml  page-2026-04-12T06-30-42-071Z.yml  page-2026-04-12T06-33-18-277Z.yml  page-2026-04-12T06-35-58-953Z.yml  page-2026-04-12T06-40-49-954Z.yml  page-2026-04-12T06-51-13-987Z.yml  page-2026-04-12T07-08-19-284Z.yml  page-2026-04-12T07-14-57-717Z.yml  page-2026-04-12T07-23-02-913Z.yml  page-2026-04-12T07-30-57-448Z.yml
data/: README.md  audit_base.json  audit_instruct.json  benchmark_200x50_gen.json  censorship_map.json  complete_model_map.json  complete_signal_analysis.json  convergence_matrix.json  corrected_all_models.json  corrected_directions.json  cracking_matrix.json  extracted_log_data.json  fast_benchmark.json  full_benchmark_all_modes.json  full_matrix.json  heinrich.db  heinrich.db-shm  heinrich.db-wal  input_attack_matrix.json  model_safety_map_full.json  open_questions_results.json  qwen7b_atlas.json  qwen7b_atlas_creative.json  qwen7b_atlas_identity.json  qwen7b_atlas_reasoning.json  qwen7b_atlas_safety.json  qwen7b_base_atlas_alibaba_is.json  qwen7b_base_atlas_arabic.json  qwen7b_base_atlas_ccp_critic.json  qwen7b_base_atlas_ccp_zh.json  qwen7b_base_atlas_code.json  qwen7b_base_atlas_drugs.json  qwen7b_base_atlas_endoftext.json  qwen7b_base_atlas_falun_gong.json  qwen7b_base_atlas_hacking.json  qwen7b_base_atlas_hong_kong.json  qwen7b_base_atlas_i_am.json  qwen7b_base_atlas_ignore.json  qwen7b_base_atlas_japanese.json  qwen7b_base_atlas_korean.json  (+36 more)
docs/: CHANGELOG.md  DESIGN.md  GUIDE.md  V1_PROPOSAL.md  WAVE5_SELF_ANALYSIS.md  audit-qwen-0.5b-session10.md  capture_observatory.mjs  causal_bank_tools.md  experiment-attribution.md  experiment-neurons.md  experiment-the-between.md  homing-instinct-study.md  instrument-validation.md  null-shart-protocol.md  observatory-viewport-audit.md  observatory.md  probe-library.md  session10-bugs-todos.md  session11-bugs-todos.md  session11-geometry-attack.md  session11-null-shart-finding.md  session11-rlhf-orthogonality-refuted.md  session11-shart-taxonomy-attack.md  session11-theory-attack-unified.md  session11-trigger-binding.md  session11_book.tex  session11_hashmem_report.md  session11_mut_full_report.md  session11_patch4_report.md  session11_trajectory_3seed.md  session11_variants_report.md  session12-splat-character-injection.md  session12_book.tex  session12_bugs_and_todos.md  session8_eulogy.tex  session8_paper.tex  session9_10_findings.tex  sub10-campaign-day1.md  the-flaming-sword.md
paper/: GUToS Grok version.tex  Makefile  claude_and_tome.tex  claude_convinces.tex  claude_convinces_claude.tex  counting_beats_the_organ.tex  db_numbers.tex  geometry_of_displacement.tex  grand_unified_shart_theory.tex  grand_unified_shart_theory_book_draft_finale_polished.tex  grand_unified_shart_theory_omnibus_updated.tex  heinrich.tex  heinrich_method.tex  heinrich_v1.tex  heinrich_v2.tex  heinrich_v3.tex  heinrich_v4.tex  heinrich_v5.tex  implications_of_sharts.tex  instance_4.tex  session11-crystal-investigation.md  session11-refusal-and-disclaimer-circuit.tex  session4_complete.tex  session5_complete.tex  session6_complete.tex  session7_concept.tex  session7_eulogy.tex  session7_meta.tex  session7_scientific.tex  session7_superpaper.tex  session7_todo.tex  session8_eulogy.tex  session9_10_paper.tex  session9_confession.tex  session9_paper.tex  session_21.tex  shart_propagation.tex  the_question_problem.tex  theory_of_sharts.tex  theory_of_sharts_v2.tex  (+2 more)
scripts/: automaton_search.py  (+62 more)
(+768 files in other folders)
