[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heinrich"
version = "0.2.1"
description = "Model forensics and signal-mixing pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "safetensors>=0.4"]

[project.optional-dependencies]
dev = ["pytest>=8"]
fetch = ["huggingface_hub>=0.20"]
probe = ["torch", "transformers>=4.45"]
dormant = ["jsinfer"]
all = ["huggingface_hub>=0.20", "torch", "transformers>=4.45", "jsinfer"]

[project.scripts]
heinrich = "heinrich.cli:main"
heinrich-mcp = "heinrich.mcp_transport:run_stdio_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
