[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heinrich"
version = "0.6.0"
description = "Model forensics: measure what language models compute, not what they output."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
]
hf = [
    "torch>=2.0",
    "transformers>=4.45",
]
analysis = [
    "scipy>=1.10",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8",
    "pytest-timeout",
]
all = [
    "heinrich[mlx]",
    "heinrich[hf]",
    "heinrich[analysis]",
    "heinrich[dev]",
]

[project.scripts]
heinrich = "heinrich.cli:main"
heinrich-mcp = "heinrich.mcp_transport:run_stdio_server"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mlx: requires MLX backend and a cached model",
    "hf: requires HF/torch backend",
    "integration: full pipeline tests (capture + analyze)",
]
